css/style.css
/* ... */
#services .title a {
  color: #111;
}

#services .description {
  font-size: 14px;
  line-height: 24px;
}

/* Call To Action Section
--------------------------------*/
#call-to-action {
	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/124N09119_6CB29_155305e9-0103-4f99-a699-4f1831e06465.png)  center;
	background-size: cover;
	padding: 80px 0;
}
/*.backgroundImg1Call2Action {
	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/124N09119_6CB29_155305e9-0103-4f99-a699-4f1831e06465.png);
	background-size: cover;
	padding: 146px ;
}
.backgroundImg2Call2Action {
	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/124N09119_6CB29_155305e9-0103-4f99-a699-4f1831e06465.png);
	background-size: cover;
	padding: 146px;
}
.backgroundImg3Call2Action {
	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/124N09119_6CB29_155305e9-0103-4f99-a699-4f1831e06465.png);
	background-size: cover;
	padding: 146px;
}*/

#call-to-action .cta-title {
  color: #fff;
  font-size: 28px;
  font-weight: 700;
}

#call-to-action .cta-text {
	color: #fff;
	position: relative;
	z-index: 1;
	top: 0px;
	text-align: left;
	left: 10vw;
	width: 400px;
}

@media (min-width: 769px) {
  #call-to-action .cta-btn-container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
	
}

#call-to-action .cta-btn {
  font-family: "Poppins", sans-serif;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 8px 30px;
  border-radius: 50px;
  transition: 0.5s;
  margin: 10px;
  border: 2px solid #fff;
  color: #fff;
}

#call-to-action .cta-btn:hover {
  background: #2dc997;
  border: 2px solid #2dc997;
}

/* Portfolio Section
--------------------------------*/
#portfolio {
	background: #fff;	
	padding: 80px 0;
}

#portfolio #portfolio-wrapper {
  padding-right: 15px;
}

#portfolio #portfolio-flters {
  padding: 0;
  margin: 0 0 45px 0;
  list-style: none;
  text-align: center;
}

#portfolio #portfolio-flters li {
  cursor: pointer;
  margin: 0 10px;
  display: inline-block;
  padding: 10px 22px;
  font-size: 12px;
  line-height: 20px;
  color: #666666;
  border-radius: 4px;
  text-transform: uppercase;
  background: #fff;
  margin-bottom: 5px;
  transition: all 0.3s ease-in-out;
}

#portfolio #portfolio-flters li:hover, #portfolio #portfolio-flters li.filter-active {
  background: #2dc997;
  color: #fff;
}

	#portfolio .portfolio-item {
		position: relative;
		/*height: 200px;*/
		overflow: hidden !important;
		/*margin-bottom: 145px;*/
		transition: all 350ms ease;
		transform: scale(1);
	}

#portfolio .portfolio-item a {
  display: block;
  margin-right: 15px;
}

#portfolio .portfolio-item img {
  position: relative;
  top: 0;
  transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
}

#portfolio .portfolio-item .details {
  height: 50px;
  background: #2dc997;
  position: absolute;
  width: 100%;
  height: 50px;
  bottom: -50px;
  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
}

#portfolio .portfolio-item h4 {
  font-size: 14px;
  font-weight: 700;
  /*color: #fff;*/
  padding: 8px 0 2px 8px;
  margin: 0;
}

#portfolio .portfolio-item .details span {
  display: block;
  color: #fff;
  font-size: 13px;
  padding-left: 8px;
}

#portfolio .portfolio-item:hover .details {
  bottom: 0;
}

#portfolio .portfolio-item:hover img {
  top: -30px;
}

/* Team Section
--------------------------------*/
#team {
  background: #fff;
  padding: 80px 0 60px 0;
}

#team .member {
  text-align: center;
  margin-bottom: 20px;
}

#team .member .pic {
  margin-bottom: 15px;
  overflow: hidden;
  height: 260px;
}

#team .member .pic img {
  max-width: 100%;
}

#team .member h4 {
  font-weight: 700;
  margin-bottom: 2px;
  font-size: 18px;
}

#team .member span {
  font-style: italic;
  display: block;
  font-size: 13px;
}

#team .member .social {
  margin-top: 15px;
}

#team .member .social a {
  color: #b3b3b3;
}

#team .member .social a:hover {
  color: #2dc997;
}

#team .member .social i {
  font-size: 18px;
  margin: 0 2px;
}

/* Contact Section
--------------------------------*/
#contact {
  background: #f7f7f7;
  padding: 80px 0 40px 0;
}

#contact #google-map {
  height: 300px;
  margin-bottom: 20px;
}

#contact .info {
  color: #333333;
}

#contact .info i {
  font-size: 32px;
  color: #2dc997;
  float: left;
}

#contact .info p {
  padding: 0 0 10px 50px;
  margin-bottom: 20px;
  line-height: 22px;
  font-size: 14px;
}

#contact .info .email p {
  padding-top: 5px;
}

#contact .social-links {
  padding-bottom: 20px;
}

#contact .social-links a {
  font-size: 18px;
  display: inline-block;
  background: #333;
  color: #fff;
  line-height: 1;
  padding: 8px 0;
  border-radius: 50%;
  text-align: center;
  width: 36px;
  height: 36px;
  transition: 0.3s;
}

#contact .social-links a:hover {
  background: #2dc997;
  color: #fff;
}

#contact .form #sendmessage {
  color: #2dc997;
  border: 1px solid #2dc997;
  display: none;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

#contact .form #errormessage {
  color: red;
  display: none;
  border: 1px solid red;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

#contact .form #sendmessage.show, #contact .form #errormessage.show, #contact .form .show {
  display: block;
}

#contact .form .validation {
  color: red;
  display: none;
  margin: 0 0 20px;
  font-weight: 400;
  font-size: 13px;
}

#contact .form input, #contact .form textarea {
  border-radius: 0;
  box-shadow: none;
  font-size: 14px;
}

#contact .form button[type="submit"] {
  background: #2dc997;
  border: 0;
  padding: 10px 24px;
  color: #fff;
  transition: 0.4s;
}

#contact .form button[type="submit"]:hover {
  background: #51d8ad;
}
/* ... */

